fixed image squishing

--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,7 @@ section.more-info {
     .hero img, .hero div {
         width: 100%;
         max-width: 100%;
-        height: 50%;
+        height: auto;
     }
 
     .buttons {
